--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@
   height: 50px;
   width: 50px;
   border-radius: 12px;
-
+  z-index: 999;
   margin: 3px;
   background-color: transparent;
   text-align: center;
